update overall styling and fix grid bugs

--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -1,8 +1,17 @@
 .main-container {
-  height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   align-content: start;
+}
+
+
+.main-view {
+  max-width: 1350px;
+  padding-top: 30px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 7px 7px;
 }
