--- a/src/components/main-view/main-view.scss
+++ b/src/components/main-view/main-view.scss
@@ -1,17 +1,3 @@
-.main-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-content: start;
-}
-
-
-.main-view {
-  max-width: 1350px;
+.container {
   padding-top: 30px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  gap: 7px 7px;
 }
