--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -1,10 +1,25 @@
+.welcome-area {
+  text-align: center;
+}
+
+.login-toggle {
+  margin-right: 5px;
+}
+
+.register-link {
+  margin-left: 5px;
+}
+
 .login-form {
-  height: 100vh;
-  width: 100%;
-  padding: 0px 10px;
+  width: 75%;
+  padding-top: 100px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: auto;
   align-content: center;
+}
+
+.login-button {
+  margin: 0 auto;
 }
