--- a/src/components/registration-view/registration-view.scss
+++ b/src/components/registration-view/registration-view.scss
@@ -1,10 +1,17 @@
+.top-area {
+  text-align: center;
+}
+
 .registration-form {
-  height: 100vh;
-  width: 100%;
-  padding: 0px 10px;
+  width: 75%;
+  padding-top: 100px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: auto;
   align-content: center;
+}
+
+.register-button {
+  margin: 0 auto;
 }
